assets/css/style.css
html {
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background-image: url(../images/diagmonds.png);
    min-height: 100%;
    margin: 0;
    position: relative;
    display: block;
    /* background-color: #4aaaa5; */
}

* {
    text-align: center;
}

h1, h2, h3, h4 {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    margin: 0px;
    padding: 0px;
    color: #ffffff;
    /* padding-top: 20px; */
}

p {
    text-decoration-color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    text-align: left;
    font-kerning: auto;
    line-height: 25px;
    /* font-size: large; */
}

p:first-of-type {
    margin-top: 0;
}

a.navBar {
    text-decoration: none;
    color: #777777;
}
a.navBar:hover {
    color: #ffffff;
    background-color: #4aaaa5;
}

.bottomMargin {
    margin-bottom: 25px;
}

.topheader {
    background: #ffffff;
    border-bottom: 2px #cccccc solid;
    padding: 0px;
    width: 100%;
    /* height: 50px; */
    /* margin-bottom: 10px; */
}

.topPanel {
    display: flex;
    width: 960px;
    margin: auto;
    justify-content: space-between;
    /* background: darkblue; */
}

.name {
    float: left;
    color: #ffffff;
    background: #4aaaa5;
    padding-top: 15px;
    width: 30%;
}

.navwrap {
    display: flex;
    color: #777777;
    float: right;
    /* background: blueviolet; */
}

.nav {
    /* background-color: darkgoldenrod; */
    /* border-right: 2px orange solid; */
    width: 100px;
    padding: 25px 0px;
}

.maincontainer {
    min-height: 100%;
    clear: both;
    margin: auto;
    background-color: #ffffff;
    padding: 25px;
    width: 910px;
    overflow: auto;
    margin-bottom: 75px;
    /* border: 2px #dddddd solid; */
}

.contentheader {
    color: #4aaaa5;
    text-align: left;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    padding-bottom: 17px;
    padding-top: 5px;
}

#biophoto {
    float: left;
    border: 2px white solid;
    margin-right: 15px;
}

.contentwrap {
    clear: both;
    float: left;
}

.project {
    float: left;   
    margin: 0px 25px 25px 0px;
    height: 220px;
    width: 300px;    
}

.projname {
    background: #4aaaa5;
    color: #ffffff;
    font-size: large;
    position: relative;
    bottom: 0;
    padding: 15px 0px;
    margin-top: -60px;
}

input {
    width: 100%;
    text-align: left;
    margin: 10px 0px;
}

.form {
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    margin: 0;
    text-align: left;
    width: 920px;    
}

.form-input {
    clear: both;
    margin-top: 5px;
    margin-bottom: 15px;
    padding: 5px;
    width: 900px;
}

button {
    /* display: inline-block; */
    color: #ffffff;
    float: left;
    border: none;
    padding: 10px 30px;
    margin: 0;
    text-decoration: none;
    background: #4aaaa5;
    font-size: 1rem;
    cursor: pointer;
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.footer {
    color: #ffffff;
    position: fixed;
    padding: 10px 0px;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #666666;
    width: 100%;
    margin: 0;
    overflow: hidden;
    border-top: 8px solid #4aaaa5;
    /* float: inline-end; */    
    /* text-align: right; */
}

/* .center {
    text-align: center;
    margin: auto;
} */

.clearfix::after {
    content: "";
    display: block;
    clear: both;
}

